--- a/backend/ecommerce/build.gradle
+++ b/backend/ecommerce/build.gradle
@@ -14,7 +14,9 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.jetbrains:annotations:20.1.0'
+    implementation 'org.jumpmind.symmetric:symmetric-csv:3.5.19'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 tasks.named('test') {
